service-discovery/consul/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: consul-ui
  namespace: consul
  annotations:
    # kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    # SSL Certificate
    cert-manager.io/cluster-issuer: letsencrypt-prod
    # Security headers
    # nginx.ingress.kubernetes.io/configuration-snippet: |
    #   add_header X-Frame-Options "SAMEORIGIN" always;
    #   add_header X-Content-Type-Options "nosniff" always;
    #   add_header X-XSS-Protection "1; mode=block" always;
    #   add_header Referrer-Policy "strict-origin-when-cross-origin" always;
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - consul.marouanedbibih.studio
    secretName: consul-tls
  rules:
  - host: consul.marouanedbibih.studio
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: consul-ui
            port:
              number: 80
